--- a/web/frontend/templates/index.html
+++ b/web/frontend/templates/index.html
@@ -36,7 +36,7 @@
                         <a href="/" class="nav-link active">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="/docs" class="nav-link active">Documentation</a>
+                        <a href="/docs" class="nav-link">Documentation</a>
                     </li>
                     <li class="nav-item">
                         <a href="/servers" class="nav-link">Manage servers</a>
