--- a/web/frontend/templates/privacy.html
+++ b/web/frontend/templates/privacy.html
@@ -32,7 +32,7 @@
                         <a href="/" class="nav-link">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="/docs" class="nav-link active">Documentation</a>
+                        <a href="/docs" class="nav-link">Documentation</a>
                     </li>
                     <li class="nav-item">
                         <a href="/servers" class="nav-link">Manage servers</a>
