--- a/web/frontend/templates/server_list.html
+++ b/web/frontend/templates/server_list.html
@@ -37,7 +37,7 @@
 						<a href="/" class="nav-link">Home</a>
 					</li>
 					<li class="nav-item">
-                        <a href="/docs" class="nav-link active">Documentation</a>
+                        <a href="/docs" class="nav-link">Documentation</a>
                     </li>
 					<li class="nav-item dropdown">
 						<a class="nav-link dropdown-toggle" href="#" id="serverListLink" role="button"
