web: add more obvious link to privacy policy

--- a/web/frontend/templates/index.html
+++ b/web/frontend/templates/index.html
@@ -47,6 +47,9 @@
                         <a href="/docs" class="nav-link">Documentation</a>
                     </li>
                     <li class="nav-item">
+                        <a href="/privacy" class="nav-link">Privacy</a>
+                    </li>
+                    <li class="nav-item">
                         <a href="/servers" class="nav-link">Manage servers</a>
                     </li>
                 </ul>
