--- a/web/frontend/templates/server.html
+++ b/web/frontend/templates/server.html
@@ -52,6 +52,9 @@
                     <li class="nav-item">
                         <a href="/docs" class="nav-link">Documentation</a>
                     </li>
+                    <li class="nav-item">
+                        <a href="/privacy" class="nav-link">Privacy</a>
+                    </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="serverListLink" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
