remove member count from dashboard home because it's not fetched anymore

--- a/web/frontend/templates/index.html
+++ b/web/frontend/templates/index.html
@@ -64,7 +64,7 @@
                 Catalogger is a logging bot for Discord that integrates with <a
                     href="https://pluralkit.me">PluralKit</a>&apos;s message proxying.
             </p>
-            <p>In {{.GuildCount}} servers with {{.UserCount}} users!</p>
+            <p>In {{.GuildCount}} servers!</p>
 
             <div class="btn-group" role="group" aria-label="Buttons">
                 <a class="btn btn-primary" href="/login?add=true" role="button">Add Catalogger to your server</a>
