combine bot/dashboard into one executable

--- a/web/frontend/templates/index.html
+++ b/web/frontend/templates/index.html
@@ -113,7 +113,7 @@
         <div class="row">
             <div class="col-md-4 screenshot">
                 <div class="card">
-                    <img src="/static/static/deleted-message.png" alt="A deleted message log">
+                    <img src="/static/deleted-message.png" alt="A deleted message log">
                     <div class="card-body">
                         <h5 class="card-title">Deleted message logging</h5>
                     </div>
@@ -121,7 +121,7 @@
             </div>
             <div class="col-md-4 screenshot">
                 <div class="card">
-                    <img src="/static/static/edited-message.png" alt="An edited message log">
+                    <img src="/static/edited-message.png" alt="An edited message log">
                     <div class="card-body">
                         <h5 class="card-title">Edited message logging</h5>
                     </div>
@@ -129,7 +129,7 @@
             </div>
             <div class="col-md-4 screenshot">
                 <div class="card">
-                    <img src="/static/static/join-log.png" alt="A join log">
+                    <img src="/static/join-log.png" alt="A join log">
                     <div class="card-body">
                         <h5 class="card-title">Member join and leave logging</h5>
                     </div>
@@ -139,7 +139,7 @@
         <div class="row">
             <div class="col-md-4 screenshot">
                 <div class="card">
-                    <img src="/static/static/ban.png" alt="A join log">
+                    <img src="/static/ban.png" alt="A join log">
                     <div class="card-body">
                         <h5 class="card-title">Ban and unban logging</h5>
                     </div>
@@ -147,7 +147,7 @@
             </div>
             <div class="col-md-4 screenshot">
                 <div class="card">
-                    <img src="/static/static/banned-warn.png" alt="A join log">
+                    <img src="/static/banned-warn.png" alt="A join log">
                     <div class="card-body">
                         <h5 class="card-title">Track banned systems' linked accounts</h5>
                     </div>
