--- a/web/frontend/templates/server.html
+++ b/web/frontend/templates/server.html
@@ -6,22 +6,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-dark-5@1.1.3/dist/css/bootstrap-dark.min.css" rel="stylesheet">
 
     <style>
         .dropdown-menu {
             max-height: 30em;
             overflow-y: auto;
-        }
-
-        .panel-form {
-            background-color: #eee;
-            border: 1px solid #ccc;
-            border-radius: 10px;
-            padding: 10px 10px;
-            box-shadow: 5px 5px 5px -2px #dbdbdb;
-            margin-bottom: 1em;
         }
 
         .channel-entry {
@@ -108,9 +98,12 @@
     <div class="container">
         <div class="row">
             <div class="col-md">
-                <div class="panel-form">
-                    <h3>Default log channels</h3>
-                    <form action="/servers/{{.Guild.ID}}/save-channels" method="post"
+                <div class="card">
+                    <div class="card-header">
+                        Default log channels
+                    </div>
+                    <div class="card-body">
+                        <form action="/servers/{{.Guild.ID}}/save-channels" method="post"
                         onsubmit="sendChannels(event, this)">
                         <h5>Messages</h5>
 
@@ -347,11 +340,15 @@
 
                         <button type="submit" class="btn btn-success">Save</button>
                     </form>
+                    </div>
                 </div>
             </div>
             <div class="col-md">
-                <div class="panel-form">
-                    <h3>Redirected channels</h3>
+                <div class="card">
+                    <div class="card-header">
+                        Redirected channels
+                    </div>
+                    <div class="card-body">
                     <form action="/servers/{{.Guild.ID}}/add-redirect" method="post"
                         onsubmit="addRedirect(event, this)">
                         <h5>Add a redirect</h5>
@@ -375,8 +372,10 @@
                                 </div>
                             </div>
                         </div>
+                        <br />
                         <button type="submit" class="btn btn-success">Add redirect</button>
                     </form>
+                    <hr />
                     <div class="redirects">
                         <h5>Currently redirected channels</h5>
                         <ul id="redirectList">
@@ -386,6 +385,7 @@
                                     onclick="delRedirect(this.parentElement.id, this.href, event)">(delete)</a></li>
                             {{end}}
                         </ul>
+                    </div>
                     </div>
                 </div>
             </div>
