feat: add tos/contact pages to dashboard

--- a/web/frontend/templates/server.html
+++ b/web/frontend/templates/server.html
@@ -394,6 +394,10 @@
         <hr>
         <footer>
             <p>
+                <a href="/contact">Contact</a>
+                &middot;
+                <a href="/tos">Terms of Service</a>
+                &middot;
                 <a href="/privacy">Privacy</a>
                 &middot;
                 <a href="https://github.com/starshine-sys/catalogger">Source code</a>
