--- a/web/frontend/templates/index.html
+++ b/web/frontend/templates/index.html
@@ -157,6 +157,10 @@
         <hr>
         <footer>
             <p>
+                <a href="/contact">Contact</a>
+                &middot;
+                <a href="/tos">Terms of Service</a>
+                &middot;
                 <a href="/privacy">Privacy</a>
                 &middot;
                 <a href="https://github.com/starshine-sys/catalogger">Source code</a>
