--- a/web/frontend/templates/server_list.html
+++ b/web/frontend/templates/server_list.html
@@ -107,9 +107,13 @@
 		<hr>
 		<footer>
 			<p>
-				<a href="/privacy">Privacy</a>
-				&middot;
-				<a href="https://github.com/starshine-sys/catalogger">Source code</a>
+				<a href="/contact">Contact</a>
+                &middot;
+                <a href="/tos">Terms of Service</a>
+                &middot;
+                <a href="/privacy">Privacy</a>
+                &middot;
+                <a href="https://github.com/starshine-sys/catalogger">Source code</a>
 			</p>
 		</footer>
 	</div>
