--- a/web/frontend/templates/tos.html
+++ b/web/frontend/templates/tos.html
@@ -13,10 +13,6 @@
             margin-top: 1em;
             margin-bottom: 1em;
         }
-
-        .screenshot {
-            margin: 0.5em 0;
-        }
     </style>
 </head>
 
@@ -49,21 +45,7 @@
     </nav>
 
     <div class="container">
-        {{if .ErrorCode}}
-        <h1><strong>Error:</strong> {{.ErrorCode}} {{.ErrorName}}</h1>
-        {{else}}
-        <h1>Error</h1>
-        {{end}}
-
-        <p>{{.Text}}</p>
-
-        <p>
-            <a id="backLink" class="btn btn-secondary" href="/" role="button">Go back</a>
-        </p>
-
-        {{if .UUID}}
-        <p>If you want to report this error to the developer, please give them this error ID, along with an explanation of what you were doing: <code>{{.UUID}}</code></p>
-        {{end}}
+        {{.Docs}}
 
         <hr>
         <footer>
@@ -79,8 +61,9 @@
         </footer>
     </div>
 
-    <script>
-        document.getElementById('backLink').setAttribute('href', document.referrer || '/');
-    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+		integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+		crossorigin="anonymous"></script>
 </body>
+
 </html>
